# gabaithon202502saga2

./: .gitignore  DockerFile.flask  DockerFile.postgresql  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/back/: main.py  requirements.txt
app/back/lib/: embedding.py  google_map.py  gpt.py  places.py
app/front/: package.json
app/front/src/app/: layout.tsx  page.tsx
app/front/src/app/register-profile/: page.tsx
app/front/src/app/result/: page.tsx
app/front/src/app/social/: page.tsx
app/front/src/components/: ArrivalEffect.tsx  FirstLogin.tsx  Loading.tsx  Login.tsx  PostEffect.tsx  PostItem.tsx  Prompt.tsx  Result.tsx  Select.tsx  Start.tsx  StartEffect.tsx  Tab.tsx
app/front/src/const/: dummy.ts  endpoint.ts
app/front/src/context/: AuthContext.tsx  GoogleMapContext.tsx  LayoutContext.tsx
app/front/src/hooks/: useArrivalEffect.ts  usePostEffect.ts  useStartEffect.ts
app/front/src/type/: route.ts
config/nginx/: nginx.conf
sql/: create_table.sql  test_vector.sql
